--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,8 @@ body{
 .ql-editor{
     font-size: 1.05rem;
 }
+
+.dark .quill > .ql-container > .ql-editor.ql-blank::before{
+    font-size: 16px;
+    color: White;
+}
